--- a/requirements.txt
+++ b/requirements.txt
@@ -25,15 +25,9 @@ pyqt5-tools==5.15.9.3.3
 pyqtgraph==0.13.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-python_qt_binding==0.4.4
 pytz==2024.1
 PyWavelets==1.4.1
-qt-dotgraph==0.4.2
-qt-gui==0.4.2
-qt-gui-cpp==0.4.2
-qt-gui-py-common==0.4.2
-qt5-applications==5.15.2.2.3
-qt5-tools==5.15.2.1.3
+# Removed incompatible or unavailable packages
 scikit-image==0.21.0
 scikit-learn==1.3.2
 scipy==1.10.1
